style/style.css
/* ... */
#mainMap .carHolder .car .chase .eyeL {
    left: 15px;
    border-right: 40px solid transparent;
    border-left: 20px solid #000;
}

#mainMap .carHolder .car .chase .eyeL::after,
#mainMap .carHolder .car .chase .eyeR::after {
    content: '';
    height: 20px;
    width: 20px;
    position: absolute;
    top: 18px;
    left: -10px;
    border-radius: 10px;
    background-image: radial-gradient(circle, rgba(255, 255, 255, 1), rgba(255, 255, 255, 0.4));
    animation: light 1s ease alternate infinite;
}

#mainMap .carHolder .car .chase .eyeR {
    right: 15px;
    border-left: 40px solid transparent;
    border-right: 20px solid #000;
}

#mainMap .carHolder .car .wheelsHolder {
    width: 100%;
    position: absolute;
    top: 390px;
    height: 80px;
    border-radius: 20px 20px 0 0;
}

#mainMap .carHolder .car .wheelsHolder .wheelL,
#mainMap .carHolder .car .wheelsHolder .wheelR {
    width: 15%;
    height: 100%;
    position: absolute;
    top: 0;
    background-color: rgba(255, 255, 255, 0.2);
    max-width: 60px;
    min-width: 40px;
    border-radius: 10px;
}

#mainMap .carHolder .car .wheelsHolder .wheelL::after,
#mainMap .carHolder .car .wheelsHolder .wheelR::after {
    content: '';
    position: absolute;
    left: 20%;
    top: 0;
    width: 4px;
    height: 100%;
    background-color: #000;
    opacity: 0.2;
    animation: wheelA 0.5s linear alternate infinite;

}

#mainMap .carHolder .car .wheelsHolder .wheelL::before,
#mainMap .carHolder .car .wheelsHolder .wheelR::before {
    content: '';
    position: absolute;
    right: 20%;
    top: 0;
    width: 4px;
    height: 100%;
    background-color: #000;
    opacity: 0.2;
    animation: wheelB 0.5s linear alternate infinite;

}

#mainMap .carHolder .car .wheelsHolder .wheelL {
    left: 5px;
}

#mainMap .carHolder .car .wheelsHolder .wheelR {
    right: 5px;
}

/* end car */


/* start projector */

#mainMap .projector {
    margin: auto;
    width: 200px;
    height: 100px;
    position: relative;
}

#mainMap .projector .back {
    width: 138px;
    height: 36px;
    background-color: #fff;
    position: absolute;
    left: 102%;
    bottom: -20px;
    transform: translateX(-50%);
    border: 5px solid #eee;
}

#mainMap .projector .left {
    height: 36px;
    width: 70px;
    background-color: #fff;
    position: absolute;
    left: 50%;
    bottom: 0;
    transform: translateX(-50%) skew(0deg, 30deg);
    border: 5px solid #eee;
}

#mainMap .projector .right {
    height: 36.8px;
    width: 72px;
    background-color: #eee;
    position: absolute;
    left: 100%;
    bottom: 0;
    transform: skew(0deg, 30deg);
    border: 5px solid #eee;
}

#mainMap .projector .top {
    height: 168px;
    width: 140px;
    background-color: #eee;
    position: absolute;
    left: 78%;
    bottom: -48px;
    transform: translateX(-49%) rotate3d(6, 1, 1, -77deg) skew(0deg, 6deg);
}

#mainMap .projector .light {
    height: 16px;
    width: 40px;
    position: absolute;
    right: 45px;
    bottom: 44px;
    border-radius: 40%;
    background-image: radial-gradient(circle, rgba(255, 255, 255, 0.2), rgba(255, 255, 255, 1));

}

#mainMap .projector .light #flash {
    content: '';
    height: 40px;
    width: 50px;
    position: absolute;
    right: 0;
    bottom: 0;
    border-radius: 50%;
    opacity: 0.1;
    background: conic-gradient(white, black, white, black, white, white, white);
}


#mainMap .projector .light .flash {
    animation: flashLight 0.5s ease;
}

/*
.projector .light::after {
    content: '';
    height: 40px;
    width: 50px;
    position: absolute;
    right: 0;
    bottom: 0;
    border-radius: 50%;
    opacity: 0.1;
    background: conic-gradient(white, black, white, black, white, white, white);
}
*/

/* end projector  */


/* start board  */

#mainMap .board {
    width: 80%;
    height: 380px;
    margin: auto;
    max-width: 600px;
    background-color: #000;
/*    border: 6px solid #eee;*/
    border-radius: 10px;
/*    margin-top: 30px;*/
    perspective: 1000px;
    overflow: hidden;
}

#mainMap .swipe {
    width: 100%;
    text-align: center;
    display: flex;
    justify-content: center;
    align-content: center;
    padding: 10px;
    z-index: 6;
}

#mainMap .swipe button {
    padding: 5px 20px;
    background-color: transparent;
    color: #fff;
    border: none;
    font-size: 24px;
/*    margin-left: 20px;*/
}

#mainMap .board .mobile {
    width: 30%;
    height: 280px;
    background-color: transparent;
    margin: 15px auto 20px;
    position: relative;
/*    display: inline-block;*/
    border: 8px solid #fff;
    border-top: 10px solid #fff;
    border-bottom: 30px solid #fff;
    border-radius: 10px;
/*    box-shadow: inset 10px 0 10px 0 rgba(60, 97, 130, 0.2);*/
    min-width: 160px;
    max-width: 170px;
/*    overflow: hidden;*/
}

#mainMap .board .mobile::after {
    content: '';
    position: absolute;
    width: 5px;
    height: 5px;
    left: 50%;
    top: -8px;
    transform: translateX(-50%);
    background-image: radial-gradient(circle, rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.5));
    z-index: 2;
    border-radius: 50%;
}

#mainMap .board .mobile::before {
    content: '';
    position: absolute;
    width: 20px;
    height: 20px;
    left: 50%;
    bottom: -24px;
    transform: translateX(-50%);
    background-image: radial-gradient(circle, rgba(0, 0, 0, 0.9), rgba(0, 0, 0, 0.5));
    z-index: 2;
    border-radius: 50%;
}

#mainMap .board .mobile img {
    width: 100%;
    height: 100%;
    position: absolute;
    left: 50%;
    top: 50%;
    transform: translate(-50%,-50%);
}

#mainMap .board .carousel {
    width: 100%;
    height: 100%;
    position: absolute;
    transform: translateZ(-288px);
    transform-style: preserve-3d;
    transition: transform 1s;
}

#mainMap .board .carousel__cell {
    position: absolute;
    width: 100%;
    height: 100%;
    left: 0px;
    top: 0px;
    background-color: #000;
}
/* ... */

